--- a/DayaliBlog.Service/DayaliBlog.Service.csproj
+++ b/DayaliBlog.Service/DayaliBlog.Service.csproj
@@ -1,7 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DayaliBlog.Model\DayaliBlog.Model.csproj" />
+  </ItemGroup>
 
 </Project>
