--- a/DayaliBlog.Web/DayaliBlog.Web.csproj
+++ b/DayaliBlog.Web/DayaliBlog.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -16,6 +16,10 @@
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0-msbuild3-final" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DayaliBlog.Model\DayaliBlog.Model.csproj" />
+    <ProjectReference Include="..\DayaliBlog.Service\DayaliBlog.Service.csproj" />
   </ItemGroup>
 
 </Project>
