--- a/DayaliBlog.Web/Properties/launchSettings.json
+++ b/DayaliBlog.Web/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:3248"
+      "applicationUrl": "http://localhost:3248/"
     }
   }
 }
