--- a/DayaliBlog.Web/appsettings.json
+++ b/DayaliBlog.Web/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "ConnStr": "server=.;uid=sa;pwd=666666;database=DayaliBlogDB",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
