--- a/DayaliBlog.Web/DayaliBlog.Web.csproj
+++ b/DayaliBlog.Web/DayaliBlog.Web.csproj
@@ -146,6 +146,27 @@
     <Content Include="wwwroot\adminstyle\js\jsapi.js" />
     <Content Include="wwwroot\adminstyle\js\PIE.htc" />
     <Content Include="wwwroot\adminstyle\js\select-ui.min.js" />
+    <Content Include="wwwroot\assets\css\bootstrap.css" />
+    <Content Include="wwwroot\assets\css\font-awesome.css" />
+    <Content Include="wwwroot\assets\css\style.css" />
+    <Content Include="wwwroot\assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="wwwroot\assets\fonts\fontawesome-webfont.svg" />
+    <Content Include="wwwroot\assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="wwwroot\assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="wwwroot\assets\fonts\FontAwesome.otf" />
+    <Content Include="wwwroot\assets\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="wwwroot\assets\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="wwwroot\assets\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="wwwroot\assets\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="wwwroot\assets\img\1.jpg" />
+    <Content Include="wwwroot\assets\img\2.jpg" />
+    <Content Include="wwwroot\assets\img\3.jpg" />
+    <Content Include="wwwroot\assets\img\ad1.jpg" />
+    <Content Include="wwwroot\assets\img\ad2.jpg" />
+    <Content Include="wwwroot\assets\img\clients.png" />
+    <Content Include="wwwroot\assets\img\person.jpg" />
+    <Content Include="wwwroot\assets\img\user.gif" />
+    <Content Include="wwwroot\assets\img\user2.png" />
     <Content Include="wwwroot\images\WelCome.jpg" />
     <Content Include="wwwroot\layui\css\layui.css" />
     <Content Include="wwwroot\layui\css\layui.mobile.css" />
