--- a/DayaliBlog.Web/appsettings.json
+++ b/DayaliBlog.Web/appsettings.json
@@ -1,5 +1,7 @@
 ﻿{
-  "ConnStr": "server=.;uid=sa;pwd=123456;database=TestBlog",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=59.110.10.97;uid=sa;pwd=mohencan0721.;database=DayaliBlogDB"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
