--- a/DayaliBlog.Web/appsettings.json
+++ b/DayaliBlog.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=.;uid=sa;pwd=1232222.;database=DayaliBlogDB"
+    "DefaultConnection": "server=.;uid=sa;pwd=5677777;database=DayaliBlogDB"
   },
   "Logging": {
     "IncludeScopes": false,
