--- a/DayaliBlog.Web/appsettings.json
+++ b/DayaliBlog.Web/appsettings.json
@@ -1,8 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    //"DefaultConnection": "server=.;uid=root;pwd=65656454;database=DayaliBlogDB"
-    //"DefaultConnection": "Driver={MySQL};Server=118.89.219.227;Port=3306;Option=131072;Stmt=;Database=DayaliBlogDB; User=root;Password=sdtly072114;"
-    "DefaultConnection": "Server=118.89.219.227;Database=DayaliBlogDB;Uid=root;Pwd=sdtly072114;SslMode=None;"
+    "DefaultConnection": "server=.;uid=sa;pwd=666666;database=DayaliBlog"
   },
   "Logging": {
     "IncludeScopes": false,
