--- a/DayaliBlog.Web/appsettings.json
+++ b/DayaliBlog.Web/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=.;uid=sa;pwd=666666;database=DayaliBlog"
+    //"DefaultConnection": "server=.;uid=sa;pwd=666666;database=DayaliBlog"
+    "DefaultConnection": "Server=118.89.219.227;Database=DayaliBlog;Uid=dayali;Pwd=Spring123;SslMode=None;"
   },
   "Logging": {
     "IncludeScopes": false,
